[tool.poetry]
name = "ontoweaver-vignette"
version = "0.0.1"
description = "OntoWeaver Vignette."
authors = ["Marko Baric <marko.baric@pasteur.fr>", "Emanuele Quaglio <emanuele.quaglio@pasteur.fr>", "Matthieu Najm <matthieu.najm@pasteur.fr>", ]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
ontoweaver = "^1.2.0"
pandas = "^2.0.1"
notebook = "^7.4.3"
biocypher = ">=0.11.0,<1.0.0"
ipykernel = "^7.1.0"
pandas-stubs = "~=2.3.3"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
sphinx_rtd_theme = "^3.0.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"