[project]
name = "ontoweaver-vignette"
version = "0.0.1"
description = "OntoWeaver Vignette."
authors = [
    { name = "Marko Baric", email = "marko.baric@pasteur.fr" },
    { name = "Emanuele Quaglio", email = "emanuele.quaglio@pasteur.fr" },
    { name = "Matthieu Najm", email = "matthieu.najm@pasteur.fr" },
]
readme = "README.md"
package-mode = false
requires-python = ">=3.12,<4.0"

dependencies = [
  "ontoweaver>=1.2.0, <1.3.0",
  "pandas>=2.3.1,<3.0",
  "notebook>=7.4.3",
  "biocypher>=0.11.0,<1.0.0",
  "ipykernel>=7.1,<8.0",
  "pandas-stubs>=2.3.3",
]

[dependency-groups]
dev = [
  "pytest>=8.3.4",
  "sphinx_rtd_theme>=3.0.2",
]